[gd_scene load_steps=7 format=2]

[ext_resource path="res://Laser.gd" type="Script" id=1]
[ext_resource path="res://asteroid_game/laser_assets/sprites/green.png" type="Texture" id=2]
[ext_resource path="res://asteroid_game/laser_assets/audio/green-laser.wav" type="AudioStream" id=3]
[ext_resource path="res://asteroid_game/laser_assets/sprites/red.png" type="Texture" id=4]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "green",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "red",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 2, 8 )

[node name="Laser" type="RigidBody2D"]
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "green"
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
rect = Rect2( -2, -8, 4, 16 )
__meta__ = {
"_edit_group_": true
}

[node name="GreenLaserSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -50.0
[connection signal="body_entered" from="." to="." method="_on_Laser_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Laser_body_exited"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
